# iroh-tickets

./: Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yaml  cleanup.yaml  docs.yaml  tests.yaml
examples/: custom.rs  endpoint.rs
pr/1/docs/: settings.html
pr/1/docs/iroh_tickets/: all.html
pr/1/docs/iroh_tickets/endpoint/: index.html  (+1 more)
pr/16/docs/iroh_tickets/: index.html
pr/18/docs/iroh_tickets/: all.html  enum.ParseError.html  index.html  trait.Ticket.html
pr/18/docs/search.index/: 1709dcdfbd35.js
pr/19/docs/iroh_tickets/: index.html
pr/2/docs/iroh_tickets/: enum.ParseError.html  trait.Ticket.html
pr/20/docs/iroh_tickets/: enum.ParseError.html  sidebar-items.js  trait.Ticket.html
pr/20/docs/search.index/: 51b383405c11.js
pr/22/docs/iroh_tickets/: all.html  enum.ParseError.html
pr/23/docs/iroh_tickets/: enum.ParseError.html  index.html  trait.Ticket.html
pr/24/docs/iroh_tickets/: all.html  enum.ParseError.html  index.html  trait.Ticket.html
pr/24/docs/search.index/: root.js
pr/25/docs/iroh_tickets/: all.html  enum.ParseError.html  index.html  trait.Ticket.html
pr/26/docs/: crates.js
pr/26/docs/iroh_tickets/: enum.ParseError.html  trait.Ticket.html
pr/26/docs/search.index/: 57b32fe86ef6.js
pr/27/docs/iroh_tickets/: all.html
pr/28/docs/iroh_tickets/: index.html
pr/28/docs/search.index/: 54d23e083f66.js
pr/3/docs/: help.html  search-index.js
pr/4/docs/iroh_tickets/: all.html  enum.ParseError.html  index.html
pr/5/docs/: src-files.js
pr/5/docs/iroh_tickets/: enum.ParseError.html  index.html  trait.Ticket.html
pr/7/docs/: search-index.js
pr/7/docs/iroh_tickets/: all.html  enum.ParseError.html  index.html  trait.Ticket.html
pr/8/docs/: help.html  settings.html  src-files.js
pr/8/docs/iroh_tickets/: all.html  enum.ParseError.html  index.html  trait.Ticket.html
pr/8/docs/search.index/: root.js
src/: endpoint.rs  lib.rs
(+89 files in other folders)
