[package]
name = "iroh-tickets"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "tickets as signaling for iroh"
license = "MIT OR Apache-2.0"
authors = ["dignifiedquire <me@dignifiedquire.com>", "n0 team"]
repository = "https://github.com/n0-computer/iroh-tickets"
keywords = ["quic", "networking", "holepunching", "p2p"]

# Sadly this also needs to be updated in .github/workflows/ci.yml
rust-version = "1.85"

[lints.rust]
missing_debug_implementations = "warn"

[lints.clippy]
unused-async = "warn"

[dependencies]
data-encoding = "2.9.0"
derive_more = { version = "2.0.1", features = ["display"] }
iroh-base = { version = "0.95", features = ["key"] }
n0-error = "0.1"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"
serde_json = "1.0.145"
